--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
-    "react-sparklines": "^1.7.0"
+    "react-sparklines": "^1.7.0",
+    "sonarqube-scanner": "^2.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
