--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^1.7.9",
     "lodash": "^4.17.10",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^3.0.1",
     "react-sparklines": "^1.7.0"
   },
   "scripts": {
@@ -16,5 +16,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "sonar": "node sonar-scanner.js"
+  },
+  "devDependencies": {
+    "sonarqube-scanner": "^4.2.6"
   }
 }
