--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sonarqube-scanner": "^4.2.6",
     "react-app-rewired": "^2.1.9", 
     "@babel/preset-env": "^7.14.0", 
-    "@babel/preset-react": "^7.14.0"
+    "@babel/preset-react": "^7.14.0",
+    "babel-jest": "^27.0.0"
   }
 }
