--- a/package.json
+++ b/package.json
@@ -3,25 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.7.9",
+    "axios": "^0.21.1",
     "lodash": "^4.17.10",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "1.1.4",
     "react-sparklines": "^1.7.0"
   },
   "scripts": {
-   "start": "react-app-rewired start", 
-    "build": "react-app-rewired build", 
-    "test": "react-app-rewired test --env=jsdom", 
-    "eject": "react-app-rewired eject", 
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
     "sonar": "node sonar-scanner.js"
   },
   "devDependencies": {
-    "sonarqube-scanner": "^4.2.6",
-    "react-app-rewired": "^2.1.9", 
-    "@babel/preset-env": "^7.14.0", 
-    "@babel/preset-react": "^7.14.0",
-    "babel-jest": "^27.0.0"
+     "sonarqube-scanner": "^4.2.6"
   }
 }
