--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "radix-simple-react",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
@@ -14,7 +14,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "sonar": "node sonar-scanner.js"
+    "eject": "react-scripts eject"
   }
 }
